--- a/tiny-epic-dungeons-adventures/src/main/resources/hr/game/tinyepicdungeonsadventures/hello-view.fxml
+++ b/tiny-epic-dungeons-adventures/src/main/resources/hr/game/tinyepicdungeonsadventures/hello-view.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23.0.1">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hr.game.tinyepicdungeonsadventures.HelloController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -18,7 +18,7 @@
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Label text="Label" GridPane.columnSpan="3" GridPane.halignment="CENTER" />
-      <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" text="Button" GridPane.columnSpan="3" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+      <Label fx:id="welcomeText" text="Label" GridPane.columnSpan="3" GridPane.halignment="CENTER" />
+      <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onHelloButtonClick" text="Hello" GridPane.columnSpan="3" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
    </children>
 </GridPane>
