--- a/tiny-epic-dungeons-adventures/src/main/resources/hr/game/tinyepicdungeonsadventures/ui/heroselection/HeroSelection.fxml
+++ b/tiny-epic-dungeons-adventures/src/main/resources/hr/game/tinyepicdungeonsadventures/ui/heroselection/HeroSelection.fxml
@@ -43,7 +43,7 @@
                         <Image url="@../../images/cards/heroes/mage-card.png" />
                      </image>
                   </ImageView>
-                  <ImageView fx:id="heroCard" fitHeight="400.0" fitWidth="300.0" layoutX="727.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true" styleClass="hero-card">
+                  <ImageView fx:id="clericCard" fitHeight="400.0" fitWidth="300.0" layoutX="727.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true" styleClass="hero-card">
                      <image>
                         <Image url="@../../images/cards/heroes/cleric-card.png" />
                      </image>
@@ -54,7 +54,7 @@
                <children>
                   <Button fx:id="applyButton" contentDisplay="CENTER" graphicTextGap="0.0" mnemonicParsing="false" styleClass="action-button" text="APPLY" textFill="#fac888">
                      <graphic>
-                        <ImageView fitHeight="100.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="200.0" fitWidth="300.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../../images/ui/button-background.png" />
                            </image>
@@ -66,7 +66,7 @@
                   </Button>
                   <Button fx:id="backButton" contentDisplay="CENTER" graphicTextGap="0.0" layoutX="675.0" layoutY="12.0" mnemonicParsing="false" styleClass="action-button" text="BACK" textFill="#fac888">
                      <graphic>
-                        <ImageView fitHeight="100.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="200.0" fitWidth="300.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../../images/ui/button-background.png" />
                            </image>
